# tree-sitter-fram

./: .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  build_dbl_tests.sh  flake.nix  generate_dbl_tests.sh  go.mod  grammar.js  highlighted.html  package-lock.json  package.json  pyproject.toml  setup.py  test_if_parses.sh  tree-sitter.json  update_expect_tests.sh
bindings/c/: tree-sitter-fram.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_fram/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterFram/: fram.h
bindings/swift/TreeSitterFramTests/: TreeSitterFramTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: comments.txt  dbl_suite.txt  type_precedence.txt
test/corpus/expect_dbl/: ok0000_emptyFile.txt  ok0001_id.txt  ok0002_poly.txt  ok0003_local.txt  ok0004_fnArg.txt  ok0005_let.txt  ok0006_fnArg.txt  ok0007_letArg.txt  ok0008_idHandler.txt  ok0009_purityRestriction.txt  ok0010_implicit.txt  ok0011_implicit.txt  ok0012_adt.txt  ok0013_emptyADT.txt  ok0014_arrows.txt  ok0015_ctor.txt  ok0016_trivialMatch.txt  ok0017_wildcard.txt  ok0018_namePattern.txt  ok0019_simplePattern.txt  ok0020_patternMatch.txt  ok0021_simpleMatch.txt  ok0022_deepMatch.txt  ok0023_letPattern.txt  ok0024_letFunc.txt  ok0025_letFuncImplicit.txt  ok0026_funSugar.txt  ok0027_explicitApp.txt  ok0028_patArg.txt  ok0030_bt.txt  (+104 more)
test/highlight/: conditional.fram
